--- a/prompts/jan.1/package.json
+++ b/prompts/jan.1/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "start": "rm -fr dist/* && parcel src/index.html --public-url .",
+    "start": "rm -fr dist/* && parcel src/index.html",
     "build": "rm -fr dist/* && parcel build src/index.html --public-url ."
   },
   "devDependencies": {
