--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "homepage": "https://github.com/EmericW/genuary2021#readme",
   "dependencies": {
+    "open-simplex-noise": "^2.4.0",
     "p5": "^1.2.0"
   },
   "devDependencies": {
